fixed some styling for rent calculator - added styling to text in rentrow - made date or rate change text be hidden on small screens - changed a few parts of the translations to get rid of the max rent in order to fit the design - made a slight change to the gradient of timeline

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,12 +99,12 @@ select {
   top: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(to top, #fbfbfb 3.15%, #172f6e 40%);
+  background: linear-gradient(to top, #fbfbfb 1%, #172f6e 40%);
 }
 
 .timeline .timeline-container {
   /* position: relative; */
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .timeline .timeline-container .timeline-icon {
